--- a/assets/styles/_main3.scss
+++ b/assets/styles/_main3.scss
@@ -1,5 +1,5 @@
 .skill_section{
-    width: 1280px;
+    // width: 100%;
     height: 667px;
     flex-shrink: 0;
     border-radius: 20px;
@@ -88,7 +88,7 @@
 
 .img3{
     position: relative;
-    right: -520px;
+    right: -450px;
     top: -50px;
     border: 1px solid white;
     width: 50px;
@@ -103,7 +103,7 @@
 .img4{
     position: relative;
     top: -300px;
-    right: -580px;
+    right: -500px;
     border: 1px solid white;
     width: 50px;
     height: 50px;
