--- a/assets/styles/_main3.scss
+++ b/assets/styles/_main3.scss
@@ -53,7 +53,9 @@
     margin-left: 0px;
    
     background-repeat: no-repeat;
-    padding: 30px ;
+    padding-right : 30px;
+    padding-top: 30px;
+
     
 }
 
@@ -102,7 +104,7 @@
 
 .img4{
     position: relative;
-    top: -300px;
+    top: -250px;
     right: -500px;
     border: 1px solid white;
     width: 50px;
