--- a/assets/styles/_section-2.scss
+++ b/assets/styles/_section-2.scss
@@ -1,3 +1,130 @@
-h1{
-    color: red;
+.section-2 {
+ margin-bottom: 120px;
+
+    .section-2__top {
+
+
+        .section-2__title {
+            text-align: center;
+
+            h1 {
+                color: #0A033C;
+
+                font-size: 45px;
+                font-weight: 700;
+                line-height: 55px;
+                margin-bottom: 20px;
+            }
+
+            p {
+                color: #5D5A6F;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 30px;
+                margin-bottom: 50px;
+            }
+        }
+
+        .section-2__btn {
+            @include headerFlex(center);
+            margin: 0 auto;
+            gap: 50px;
+            margin-bottom: 45px;
+
+            button {
+                padding: 20px 30px;
+                border-radius: 10px;
+                border: none;
+                color: #0A033C;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 20px;
+            }
+
+            button:hover {
+                padding: 20px 30px;
+                border-radius: 10px;
+                border: none;
+                background-color: #FF6652;
+                color: white;
+            }
+        }
+    }
+
+    .section-2__bot {
+
+        .section-2-content-top {
+            @include headerFlex;
+            gap: 40px;
+            margin-bottom: 40px;
+
+            .section-2__card {
+                text-align: center;
+                padding: 30px 15px;
+                border-radius: 15px;
+                background: #FFF;
+
+
+                img {
+                    margin-bottom: 20px;
+                    background-color: transparent;
+
+                }
+
+                h3 {
+                    color: #0A033C;
+                    font-size: 25px;
+                    font-weight: 600;
+                    line-height: normal;
+                    margin-bottom: 15px;
+                    background-color: transparent;
+
+                }
+
+                p {
+                    color: #5D5A6F;
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 30px;
+                    margin-bottom: 25px;
+                    background-color: transparent;
+
+
+                }
+
+                button {
+                    color: #9C4DF4;
+                    font-size: 16px;
+                    font-weight: 500;
+                    line-height: 20px;
+                    padding: 12px 31px;
+                    border-radius: 5px;
+                    border: 1px solid #9C4DF4;
+                    margin-bottom: 30px;
+                    background-color: transparent;
+                }
+
+                button:hover {
+                    background-color: #9C4DF4;
+                    color: white;
+                }
+            }
+        }
+
+    }
+
+    .section-2__button {
+            text-align: center;  
+        
+        button {
+         font-size: 16px;
+        font-weight: 500;
+        line-height: 20px;
+        border-radius: 10px;
+        background: #9C4DF4;
+        padding: 20px 30px; 
+        color: white; 
+        border: none;  
+        }
+    }
 }
