--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -93,9 +93,9 @@ a {
   text-decoration: none;
 }
 
-body {
-  background-color: #f7f5fa;
-}
+
+
+/* setion 1  */
 
 .contact .contact__title {
   text-align: center;
